# Kora-Contract

./: .gitignore
contracts/access_control/src/: lib.rs
contracts/financing_pool/: Cargo.toml
contracts/financing_pool/src/: lib.rs
contracts/financing_pool/test_snapshots/tests/: test_initialize_already_initialized_fails.1.json  test_initialize_invalid_fee_bps_fails.1.json  test_initialize_success.1.json  test_mark_default_pool_not_found.1.json  test_mark_default_requires_admin.1.json  test_record_position_arithmetic_overflow.1.json  test_record_position_requires_admin.1.json  test_repay_invalid_amount.1.json  test_repay_pool_not_found.1.json
contracts/invoice_nft/src/: lib.rs
contracts/invoice_nft/test_snapshots/tests/: test_get_nonexistent_invoice_fails.1.json  test_initialize_already_initialized_fails.1.json  test_invalid_status_transition_created_to_funded_fails.1.json  test_invalid_status_transition_listed_to_repaid_fails.1.json  test_invoice_immutability_after_creation.1.json  test_invoice_timestamps_recorded.1.json  test_large_invoice_amounts.1.json  test_migrate_enables_future_operations.1.json  test_migrate_idempotent.1.json  test_migrate_non_admin_fails.1.json  test_migrate_preserves_existing_invoices.1.json  (+10 more)
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/risk_registry/src/: lib.rs
contracts/shared/src/: errors.rs  events.rs  lib.rs  reentrancy.rs  types.rs  validation.rs
contracts/tests/src/: lib.rs
contracts/treasury/src/: lib.rs
docs/: access-control.md  invoice-nft.md  marketplace.md
(+21 files in other folders)
