[package]
name = "kora-financing-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
kora-shared = { path = "../shared" }
kora-invoice-nft = { path = "../invoice_nft" }
kora-access-control = { path = "../access_control" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
kora-shared = { path = "../shared" }
kora-invoice-nft = { path = "../invoice_nft" }
kora-access-control = { path = "../access_control" }
